Version 26   2013-December-25

--Fixed newly-broken visibility toggle in tape playback.  Also, improved the
  way view jump-back looks when visibility shroud turned back on after panning
  around the house in a paused tape.

--Improved orientation of vault when it is surrounded by a mix of wall and
  structural tiles so that it faces out through the non-wall tiles.

--Gave pits the 'wall' and 'structural' properties so that other objects orient
  themselves around them (for example, a vault surrounded by three pits will
  face the opening).

--Fixed so that family objects along bottom overhang row have proper dark
  outlines.

--Fixed so that non-wall objects don't appear in the bottom overhang row during
  robbery (which would give their off-screen location away, even though they
  are not actually visible)

--Finally dealt with the "see through one wall" issue by fading out invisible
  objects under the shroud to transparent.  Now a single thickness of walls
  fully obscures what's behind it, no matter what monitor gamma settings are
  used.





Version 25   Live Server Fixes

--Added work-around for rare MySQL lock wait timeout issue (assuming that some
  other MySQL process has runaway and killing that other process to force it to
  release the lock).





Version 25   2013-November-27 

--Fixed crash if player commits suicides from the edit screen while some living
  family members have blocked exit paths (thanks Seth Scott).

--Fixed drag-to-place glitch (stubborn tile that won't change) if player moves
  to shift the screen during the drag (thanks Colorfusion).

--Fixed mouse hover visual glitch in whole map saved images (thanks
  Colorfusion).

--Added a back button on object/tool picker grid screens (to leave picker
  without picking anything).  The lack of a way to go back was confusing to
  new users.

--Fixed a visibility glitch for mobile objects and family members when
  positioned behind a diagonal gap.  Before, they could see the robber and